# runstate-tui

./: .git-blame-ignore-revs  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/backlog/: index.md  liveness-overlay.md  metric-discovery.md  multi-run-remainders.md  readme-showcase.md  stage4-multi-run-table.md
docs/superpowers/notes/: 2026-07-18-fixture-basis.md
docs/superpowers/plans/: 2026-07-17-stage0-defended-fold.md  2026-07-17-stage1a-resolver-open-wrapper.md  2026-07-18-corrupt-status-reshape.md  2026-07-18-fixture-basis.md  2026-07-18-fold-polish-batch.md  2026-07-18-precursor-torn-collapse.md  2026-07-18-stage1b-textual-view.md  2026-07-18-stage2-stop.md  2026-07-18-stage3-drilldown.md  2026-07-18-stage4-multi-run-table.md  2026-07-19-drilldown-redesign.md  2026-07-19-readme-showcase.md  2026-07-21-glob-resolver.md  2026-07-22-flood-summary-strip.md
docs/superpowers/specs/: 2026-07-17-runstate-tui-core-design.md  2026-07-19-readme-showcase-design.md  (+4 more)
runstate_tui/: __init__.py  __main__.py  app.py  confirm.py  control.py  detail.py  env.py  fold.py  format.py  multirun.py  pool.py  resolver.py  table.py  types.py
scripts/: showcase.py
tests/: conftest.py  helpers.py  test_app.py  test_cli.py  test_confirm.py  test_control.py  test_detail.py  test_env.py  test_fixtures.py  test_fold.py  test_format.py  test_multirun.py  test_pool.py  test_resolver.py  test_showcase.py  test_smoke.py  test_table.py  test_types.py
tests/scenarios/: test_control_plane.py  test_fold_plane.py  test_helpers.py  test_log_plane.py  test_table_plane.py
